--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ ul li{list-style:none}
 img{vertical-align:top;border:none}
 html{font-size: 10px;}
 body { padding-top: 124px; }
-/* .header{height: 1060px;} */
+.header{-webkit-transform: translateZ(0);}
 .border{border:1px solid red }
 .wrap ,.wrap .navbar-brand{font-size: 1.2rem;height: 30px;}
 .wrap a{padding:0 15px;line-height: 30px;height: 30px;}
