--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,8 @@
 *{margin:0;padding:0}
 ul li{list-style:none}
-img{vertical-align:top;border:none}
+
 html{font-size: 10px;}
 body { padding-top: 124px; }
-.header{-webkit-transform: translateZ(0);}
 .border{border:1px solid red }
 .wrap ,.wrap .navbar-brand{font-size: 1.2rem;height: 30px;}
 .wrap a{padding:0 15px;line-height: 30px;height: 30px;}
@@ -42,3 +41,12 @@ body { padding-top: 124px; }
 .employment h3 {color: #666;font-weight: 100;}
 .footer{padding:50px 0;}
 .footer span{padding:0 10px;}
+
+/* register页面css */
+.register span{display: inline-block;}
+.register .title{color:#8ECB3C;}
+.register .form-row{margin: 30px auto;width:80%;}
+.register .form-row input ,.register .form-row button {width:100%;height: 44px;}
+/* .register .form-row input {width: 60%;} */
+/* .register .form-row .code{width: 40%;height:44px;border: 1px solid red;} */
+
