--- a/css/index.css
+++ b/css/index.css
@@ -49,10 +49,9 @@ body { padding-top: 124px; }
 .register .title{color:#8ECB3C;}
 .register .form-row{margin:0 auto;margin-top: 40px;width:80%;}
 .register .form-row input {width:100%;height: 46px;border:1px solid #ddd;background-color:transparent;}
-.form-row input:focus {outline-color: #8ECB3C;}
-.register  img {margin-top: -2px; border: 1px solid #ddd;}
+.register img {margin-top: -2px; border: 1px solid #ddd;}
 .register  button{border-radius: 0;background-color: #8ECB3C;border-color:  #8ECB3C;}
 .register .agree {margin-top: 10px;}
 .register .agree input{height: 14px;width: 14px;vertical-align: middle;margin-top: -2px;}
-.register .agree input:focus{outline:none;}
+.register input:focus {box-shadow: 1px 2px 3px #d7f4f1;border-color:#8ECB3C;outline-color: #8ECB3C;outline:none;}
 .register .agree ,.register .login{text-align: center;}
