--- a/css/index.css
+++ b/css/index.css
@@ -44,14 +44,28 @@ body { padding-top: 124px; }
 .footer span{padding:0 10px;}
 
 /* register页面css */
-.register {padding-bottom: 20px;}
+/* .register {padding: 0;} */
 .register span{display: inline-block;}
 .register .title{color:#8ECB3C;}
 .register .form-row{margin:0 auto;margin-top: 40px;width:80%;}
 .register .form-row input {width:100%;height: 46px;border:1px solid #ddd;background-color:transparent;}
+.register .form-row input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+			color: #9fa3b0;font-size:14px;padding-left: 10px;
+			}
+.register .form-row input:-moz-placeholder, textarea:-moz-placeholder {
+			color:#9fa3b0;font-size:14px;padding-left: 10px;
+			}
+.register .form-rowinput::-moz-placeholder, textarea::-moz-placeholder {
+			color:#9fa3b0;font-size:14px;padding-left: 10px;
+			}
+.register .form-row input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+			color:#9fa3b0;font-size:14px;padding-left: 10px;
+		   }
 .register img {margin-top: -2px; border: 1px solid #ddd;}
 .register  button{border-radius: 0;background-color: #8ECB3C;border-color:  #8ECB3C;}
 .register .agree {margin-top: 10px;}
 .register .agree input{height: 14px;width: 14px;vertical-align: middle;margin-top: -2px;}
 .register input:focus {box-shadow: 1px 2px 3px #d7f4f1;border-color:#8ECB3C;outline-color: #8ECB3C;outline:none;}
-.register .agree ,.register .login{text-align: center;}
+.register .agree ,.register .login{text-align: center;color: #9fa3b0;}
+.register-right{padding-left: 10px;padding-right: 0;}
+.register-left{background: #F6F6F6;padding-bottom: 20px;}
