--- a/css/index.css
+++ b/css/index.css
@@ -49,16 +49,29 @@ body { padding-top: 124px; }
 .register .title{color:#8ECB3C;}
 .register .form-row{margin:0 auto;margin-top: 40px;width:80%;}
 .register .form-row input {width:100%;height: 46px;border:1px solid #ddd;background-color:transparent;}
-.register .form-row input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+/* .register .form-row input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 			color: #9fa3b0;font-size:14px;padding-left: 10px;
 			}
 .register .form-row input:-moz-placeholder, textarea:-moz-placeholder {
 			color:#9fa3b0;font-size:14px;padding-left: 10px;
 			}
-.register .form-rowinput::-moz-placeholder, textarea::-moz-placeholder {
+.register .form-row input::-moz-placeholder, textarea::-moz-placeholder {
 			color:#9fa3b0;font-size:14px;padding-left: 10px;
 			}
 .register .form-row input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+			color:#9fa3b0;font-size:14px;padding-left: 10px;
+		   }
+ */
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+			color: #9fa3b0;font-size:14px;padding-left: 10px;
+			}
+input:-moz-placeholder, textarea:-moz-placeholder {
+			color:#9fa3b0;font-size:14px;padding-left: 10px;
+			}
+input::-moz-placeholder, textarea::-moz-placeholder {
+			color:#9fa3b0;font-size:14px;padding-left: 10px;
+			}
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 			color:#9fa3b0;font-size:14px;padding-left: 10px;
 		   }
 .register img {margin-top: -2px; border: 1px solid #ddd;}
